--- a/style.css
+++ b/style.css
@@ -21,15 +21,16 @@ text-align: center;
 }
 .cal-container{
     background-color: rgb(0, 0, 0);
-    height: 400px;
+    height: 450px;
     width: 300px;
 }
 .display{
     width: auto;
-    background-color: rgb(43, 98, 43);
+    background-color: rgb(102, 152, 93);
     height: 50px;
-    text-align: right;
+    text-align: end;
     font-size: 38px;
+    margin: 5px;
 }
 .buttons-container{
     display: grid;
@@ -37,7 +38,12 @@ text-align: center;
     background-color: rgb(0, 0, 0);
     grid-gap: 1px;
     margin-top: 10px;
-    /* border: 1px solid red; */
     height: 330px;
 }
+.clear{
+    background-color: brown;
+    color: white;
+    /* font-size: 20px; */
+}
+
 
