--- a/style.css
+++ b/style.css
@@ -32,6 +32,7 @@ text-align: center;
     text-align: end;
     font-size: 38px;
     margin: 5px;
+    resize: none;
 }
 .buttons-container{
     display: grid;
