--- a/style.css
+++ b/style.css
@@ -63,4 +63,15 @@ button:hover{
     font-size: 15px;
 }
 
+.logZone{
+    width: 500px;
+    height: 200px;
+    background-color: black;
+    margin: 5px auto 0;
+}
+.log{
+    background-color: black;
+    color: green;
+}
+
 
