--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ text-align: center;
     background-color: rgb(0, 0, 0);
     height: 450px;
     width: 300px;
+    padding: 5px;
 }
 .display{
     width: 285px;
@@ -63,7 +64,7 @@ button:hover{
     font-size: 15px;
 }
 
-.logZone{
+/* .logZone{
     width: 500px;
     height: 200px;
     background-color: black;
@@ -72,6 +73,6 @@ button:hover{
 .log{
     background-color: black;
     color: green;
-}
+} */
 
 
