--- a/style.css
+++ b/style.css
@@ -17,7 +17,6 @@ text-align: center;
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    border: 1px solid red;
     max-width: 100%;
     max-height: 600px;
 }
@@ -31,7 +30,7 @@ text-align: center;
 .display{
     overflow: hidden;
     width: 285px;
-    background-color: rgb(102, 152, 93);
+    background-color: rgb(127, 182, 117);
     height: 50px;
     text-align: end;
     font-size: 38px;
@@ -43,7 +42,7 @@ text-align: center;
     display: grid;
     grid-template-columns: repeat(4,1fr);
     background-color: rgb(0, 0, 0);
-    grid-gap: 1px;
+    grid-gap: 5px;
     margin-top: 10px;
     height: 330px;
 }
@@ -51,6 +50,7 @@ text-align: center;
 button:hover{
     background-color: rgba(245, 244, 243, 0.68);
     transition-duration: 0.2s;
+    border-radius: 4px;
 }
 
 .clear{
@@ -67,16 +67,3 @@ button:hover{
     height: 20px;
     font-size: 15px;
 }
-
-/* .logZone{
-    width: 500px;
-    height: 200px;
-    background-color: black;
-    margin: 5px auto 0;
-}
-.log{
-    background-color: black;
-    color: green;
-} */
-
-
