--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 2px;
 }
 body{
-    background-color: rgb(49, 40, 100);
+    background-image: linear-gradient(235deg, rgb(94, 7, 94), rgb(203, 194, 194));
 }
 .title{
 max-width: 100%;
@@ -22,7 +22,7 @@ text-align: center;
 }
 .cal-container{
     border-radius: 5px;
-    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.374);
     height: 450px;
     width: 300px;
     padding: 5px;
@@ -30,7 +30,7 @@ text-align: center;
 .display{
     overflow: hidden;
     width: 285px;
-    background-color: rgb(127, 182, 117);
+    background-color: rgba(127, 182, 117, 0.838);
     height: 50px;
     text-align: end;
     font-size: 38px;
@@ -41,7 +41,8 @@ text-align: center;
 .bContainer{
     display: grid;
     grid-template-columns: repeat(4,1fr);
-    background-color: rgb(0, 0, 0);
+    border-radius: 20px;
+    background-color: rgba(0, 0, 0, 0.145);
     grid-gap: 5px;
     margin-top: 10px;
     height: 330px;
@@ -59,9 +60,10 @@ button:hover{
     /* font-size: 20px; */
 }
 .credits{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.181);
+    border-radius: 5px;
     margin-top: 10px;
-    margin-left: 90px;
+    margin-left: 80px;
     color: white;
     width: 150px;
     height: 20px;
